--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.5",
+    "react-router-native": "^6.6.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
