--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "expo": "~47.0.12",
+    "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "react-router-native": "^6.6.2",
