--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "appstkmov",
+    "name": "FldrStore",
     "slug": "appstkmov",
     "version": "1.0.0",
     "orientation": "portrait",
