--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appstkmov",
+  "name": "FldrStore",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.4",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "expo": "~47.0.12",
